# reactip

./: .gitignore  README.md  pyproject.toml  reactip_calculator.py  run_se_gsm.py  run_se_gsm.slurm
deployment/: README.md  compile_from_package.sh  compile_model.slurm
docs/: nequip_integration_notes.md  pygsm_workflow_and_parameters.md  reaction_path_sampling.md
examples/benchmark_cases/: README.md
examples/benchmark_cases/butadiene_ethylene_diels_alder__C6H10/: reactant.xyz
examples/exploratory_cases/: README.md
examples/exploratory_cases/2_4_diphenylpentane__C17H20/: README.md  isomers_aryl_shift_left.txt  isomers_methyl_shift_left.txt  isomers_torsion_backbone_anti.txt  reactant.xyz  run_calculator.sh  run_se_gsm_aryl_shift.sh  run_se_gsm_methyl_shift.sh  run_se_gsm_torsion.sh
examples/seed_structures/: README.md
examples/seed_structures/Cl7138__C4H4ClNS/: struc.xyz
examples/seed_structures/Cl7164__C4H4ClNO/: struc.xyz
examples/seed_structures/Cl7166__C4H4ClNO/: struc.xyz
examples/seed_structures/Cl7168__C4H4ClNO/: struc.xyz
examples/seed_structures/Cl7188__C4H4ClNO/: struc.xyz
reactip/: __init__.py  grad_nequip.py  mlip_calculator.py  pathway_2d.py  reaction_network.py  reactip_lot.py  reporting.py  run_figures.py  sampling.py  se_gsm.py  smiles.py  ts_validation.py  utils.py  visualize.py
runs/diels_alder_dlc30/: summary.json  trajectory.sdf
runs/diels_alder_dlc30/scratch/: growth_iters_001_000.xyz  growth_iters_001_001.xyz  growth_iters_001_002.xyz  growth_iters_001_003.xyz  growth_iters_001_004.xyz
runs/diels_alder_dlc30/scratch/001/: E_0.txt  E_1.txt  E_2.txt  E_3.txt  E_4.txt  E_5.txt
runs/diels_alder_dlc30/scratch/001/0/: opt_0.xyz
runs/diels_alder_dlc30/scratch/001/1/: opt_1.xyz
runs/diels_alder_dlc30/scratch/001/2/: opt_2.xyz
runs/diels_alder_dlc30/scratch/001/3/: opt_3.xyz
runs/diels_alder_dlc30/scratch/001/4/: opt_4.xyz
runs/diels_alder_dlc30/scratch/001/5/: opt_5.xyz
