[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactip"
version = "0.1.0"
description = "Reactive Interatomic Potential inference library for NequIP/Allegro models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nequip==0.17.1",
    "ase==3.28.0",
    "numpy==2.4.4",
    "imageio==2.37.3",
    "matplotlib==3.10.9",
    "pyGSM @ git+https://github.com/snu-lcbc/pyGSM.git@94e2eabf4f513967a6ff7f18525fbeed90b816f6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reactip*"]
