[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactip"
version = "0.1.0"
description = "Reactive Interatomic Potential inference library for NequIP/Allegro models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "nequip==0.17.1",
    "ase==3.28.0",
    "numpy==2.4.4",
    "imageio==2.37.3",
    "matplotlib==3.10.9",
    "pyGSM @ git+https://github.com/snu-lcbc/pyGSM.git@reactip-compat",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reactip*"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
